--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.1"
+    "next": "15.4.1",
+    "react-icons": "^4.12.0",
+    "framer-motion": "^11.0.0",
+    "@fontsource/inter": "^5.0.0",
+    "@fontsource/poppins": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
